# ff-mcp-clickhouse

./: .dockerignore  .gitignore  1.py  README.md  pyproject.toml  setup.py
.cursor/rules/: general.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml  publish.yml
mcp_clickhouse/: __init__.py  instructions.py  main.py  mcp_env.py  mcp_server.py
mcp_clickhouse/prompts/: instructions.md
test-services/: docker-compose.yaml
tests/: test_table_exists.py  test_tool.py
